OutOfMemoryRunner simplified